--- a/DIM_UWP/DIM_UWP/MainPage.xaml
+++ b/DIM_UWP/DIM_UWP/MainPage.xaml
@@ -6,9 +6,40 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="White">
 
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+
+        <ListView Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" x:Name="listView" >
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel>
+                        <TextBlock Text="{Binding MouseAction}" 
+                           Margin="20,0,20,8"
+                           FontSize="24" 
+                           FontStyle="Italic" 
+                           FontWeight="SemiBold"
+                           Foreground="DarkBlue" />
+                        <TextBlock Text="{Binding Description}" 
+                           Margin="20,0,20,8"
+                           FontSize="16"
+                           Foreground="Black" 
+                           Opacity="0.8" />
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" x:Name="image" HorizontalAlignment="Center" Height="250" VerticalAlignment="Center" Width="250" Tapped="Image_Tapped" DoubleTapped="Image_DoubleTapped" RightTapped="Image_RightTapped" Holding="Image_Holding" Source="Assets/maho.png"/>
+        <ComboBox x:Name="comboBox" Grid.Column="1" HorizontalAlignment="Left" Margin="750,0,-64,0" VerticalAlignment="Top"/>
+
 
     </Grid>
 </Page>
