--- a/DIM_UWP/DIM_UWP/MainPage.xaml
+++ b/DIM_UWP/DIM_UWP/MainPage.xaml
@@ -9,37 +9,33 @@
     Background="White">
 
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="1*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="1*" />
-        </Grid.RowDefinitions>
+        <NavigationView x:Name="NavView"
+                    ItemInvoked="NavView_ItemInvoked"
+                    SelectionChanged="NavView_SelectionChanged"
+                        IsBackEnabled="false">
+            <NavigationView.MenuItems>
+                <NavigationViewItemHeader x:Name="PatientNavItem" Content="Activities" />
+                <NavigationViewItem x:Name="e0" Content="Activity 1" Icon="Accept"/>
+                <NavigationViewItem x:Name="e1" Content="Activity 2" Icon="Edit"/>
+                <NavigationViewItem x:Name="e2" Content="Activity 3" Icon="BackToWindow"/>
+                <NavigationViewItem x:Name="e3" Content="Activity 4" Icon="ImportAll"/>
+                <NavigationViewItemSeparator x:Name="SeparatorPatient"/>
+                <NavigationViewItemHeader  x:Name="MedicNavItem" Content="Entregable"/>
+                <NavigationViewItem x:Name="e4" Content="Ejercicio entregable">
+                    <NavigationViewItem.Icon>
+                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xF0E3;"/>
+                    </NavigationViewItem.Icon>
+                </NavigationViewItem>
+            </NavigationView.MenuItems>
+            <Frame x:Name="ContentFrame" Margin="24">
+                <Frame.ContentTransitions>
+                    <TransitionCollection>
+                        <NavigationThemeTransition/>
+                    </TransitionCollection>
+                </Frame.ContentTransitions>
+            </Frame>
 
-        <ListView Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" x:Name="listView" >
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel>
-                        <TextBlock Text="{Binding MouseAction}" 
-                           Margin="20,0,20,8"
-                           FontSize="24" 
-                           FontStyle="Italic" 
-                           FontWeight="SemiBold"
-                           Foreground="DarkBlue" />
-                        <TextBlock Text="{Binding Description}" 
-                           Margin="20,0,20,8"
-                           FontSize="16"
-                           Foreground="Black" 
-                           Opacity="0.8" />
-                    </StackPanel>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-        <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" x:Name="image" HorizontalAlignment="Center" Height="250" VerticalAlignment="Center" Width="250" Tapped="Image_Tapped" DoubleTapped="Image_DoubleTapped" RightTapped="Image_RightTapped" Holding="Image_Holding" Source="Assets/maho.png"/>
-        <ComboBox x:Name="comboBox" Grid.Column="1" HorizontalAlignment="Left" Margin="750,0,-64,0" VerticalAlignment="Top"/>
-
+        </NavigationView>
 
     </Grid>
 </Page>
