--- a/DIM_UWP/DIM_UWP/Activities/Activity4.xaml
+++ b/DIM_UWP/DIM_UWP/Activities/Activity4.xaml
@@ -18,39 +18,25 @@
             <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
 
-        <ListView Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" x:Name="listView" >
-            <ListView.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <ItemsStackPanel ItemsUpdatingScrollMode="KeepLastItemInView" />
-                </ItemsPanelTemplate>
-            </ListView.ItemsPanel>
-            <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="BorderBrush" Value="Black"/>
-                    <Setter Property="BorderThickness" Value="0,0,0,1"/>
-                </Style>
-            </ListView.ItemContainerStyle>
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel>
-                        <TextBlock Text="{Binding MouseAction}" 
-                           Margin="20,0,20,8"
-                           FontSize="24" 
-                           FontStyle="Italic" 
-                           FontWeight="SemiBold"
-                           Foreground="DarkBlue" />
-                        <TextBlock Text="{Binding Description}" 
-                           Margin="20,0,20,8"
-                           FontSize="16"
-                           Foreground="Black" 
-                           Opacity="0.8" />
-                    </StackPanel>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-        <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" x:Name="image" HorizontalAlignment="Center" Height="250" VerticalAlignment="Center" Width="250" Tapped="Image_Tapped" DoubleTapped="Image_DoubleTapped" RightTapped="Image_RightTapped" Holding="Image_Holding" Source="/Assets/maho.png" ManipulationDelta="Image_ManipulationDelta" ManipulationStarted="Image_ManipulationStarted" ManipulationCompleted="Image_ManipulationCompleted">
+       
+        <Image Grid.Column="0" Grid.Row="0" x:Name="image" HorizontalAlignment="Center" Height="250" VerticalAlignment="Center" Width="250" Source="/Assets/maho.png" ManipulationDelta="Image_ManipulationDelta" ManipulationStarted="Image_ManipulationStarted" ManipulationCompleted="Image_ManipulationCompleted" ManipulationMode="All">
             <Image.RenderTransform>
                 <CompositeTransform x:Name = "image_Transform"/>
+            </Image.RenderTransform>
+        </Image>
+        <Image Grid.Column="0" Grid.Row="1" x:Name="image2" HorizontalAlignment="Center" Height="300" VerticalAlignment="Center" Width="300" Source="/Assets/maho2.jpg" ManipulationStarted="Image2_ManipulationStarted" ManipulationCompleted="Image2_ManipulationCompleted" ManipulationDelta="Image2_ManipulationDelta" ManipulationMode="All">
+            <Image.RenderTransform>
+                <CompositeTransform x:Name = "image_Transform2"/>
+            </Image.RenderTransform>
+        </Image>
+        <Image Grid.Column="1" Grid.Row="0" x:Name="image3" HorizontalAlignment="Center" Height="300" VerticalAlignment="Center" Width="300" Source="/Assets/maho3.png" ManipulationStarted="Image3_ManipulationStarted" ManipulationCompleted="Image3_ManipulationCompleted" ManipulationDelta="Image3_ManipulationDelta" ManipulationMode="All">
+            <Image.RenderTransform>
+                <CompositeTransform x:Name = "image_Transform3"/>
+            </Image.RenderTransform>
+        </Image>
+        <Image Grid.Column="1" Grid.Row="1" x:Name="image4" HorizontalAlignment="Center" Height="250" VerticalAlignment="Center" Width="250" Source="/Assets/maho4.jpg" ManipulationStarted="Image4_ManipulationStarted" ManipulationCompleted="Image4_ManipulationCompleted" ManipulationDelta="Image4_ManipulationDelta" ManipulationMode="All">
+            <Image.RenderTransform>
+                <CompositeTransform x:Name = "image_Transform4"/>
             </Image.RenderTransform>
         </Image>
 
