--- a/DIM_UWP/Kinect/MainWindow.xaml
+++ b/DIM_UWP/Kinect/MainWindow.xaml
@@ -5,8 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Kinect"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" Loaded="Window_Loaded_1">
     <Grid>
-        
+        <Image x:Name="colorStream" HorizontalAlignment="Left" Height="299" Margin="10,10,0,0" VerticalAlignment="Top" Width="497"/>
+        <Button x:Name="tomarFoto" Content="Tomar Foto" HorizontalAlignment="Left" Margin="417,349,0,0" VerticalAlignment="Top" Width="75" Click="tomarFoto_Click"/>
+        <CheckBox x:Name="WriteableBitmap" Content="Bitmap Eficiente" HorizontalAlignment="Left" Margin="58,337,0,0" VerticalAlignment="Top"/>
+
     </Grid>
 </Window>
